Fixes the footer blocking mouse clicks to elements behind the footer, like buttons.

--- a/All project code/resources/css/style.css
+++ b/All project code/resources/css/style.css
@@ -15,3 +15,7 @@ body {
 {
     color: black;
 }
+
+.non-interactive {
+    pointer-events: none;
+}
